--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "browser": {
     "fs": false,
