--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "rehype-mathjax": "^4.0.2",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
