--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dqbd/tiktoken": "^1.0.7",
     "@azure/identity": "^3.3.2",
     "@azure/openai": "^1.0.0-beta.7",
     "@tabler/icons-react": "^2.41.0",
